--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 		<center><h1>Let's Get Schwifty</h1></center>
 		<br>
 		<center>
-		<ul>
-			<li>Let's</li>
-			<li>Get</li>
-			<li>Schwifty</li>
-		</ul>
+		<img src="schwifty.gif">
+		<h2>TEDxUNC 16/17</h2>
 		</center>
 	</body>
 </html>
